@@ -11,6 +11,10 @@ import (
 	sigar "github.com/elastic/gosigar"
 )
 
+type Config struct {
+	IgnoreTypes []string `config:"filesystem.ignore_types"`
+}
+
 type FileSystemStat struct {
 	sigar.FileSystemUsage
 	DevName     string  `json:"device_name"`
@@ -77,5 +81,37 @@ func GetFilesystemEvent(fsStat *FileSystemStat) common.MapStr {
 			"pct":   fsStat.UsedPercent,
 			"bytes": fsStat.Used,
 		},
+	}
+}
+
+// Predicate is a function predicate for use with filesystems. It returns true
+// if the argument matches the predicate.
+type Predicate func(*sigar.FileSystem) bool
+
+// Filter returns a filtered list of filesystems. The in parameter
+// is used as the backing storage for the returned slice and is therefore
+// modified in this operation.
+func Filter(in []sigar.FileSystem, p Predicate) []sigar.FileSystem {
+	out := in[:0]
+	for _, fs := range in {
+		if p(&fs) {
+			out = append(out, fs)
+		}
+	}
+	return out
+}
+
+// BuildTypeFilter returns a predicate that returns false if the given
+// filesystem has a type that matches one of the ignoreType values.
+func BuildTypeFilter(ignoreType ...string) Predicate {
+	return func(fs *sigar.FileSystem) bool {
+		for _, fsType := range ignoreType {
+			// XXX (andrewkroh): SysTypeName appears to be used for non-Windows
+			// and TypeName is used exclusively for Windows.
+			if fs.SysTypeName == fsType || fs.TypeName == fsType {
+				return false
+			}
+		}
+		return true
 	}
 }
