@@ -63,6 +63,8 @@ https://github.com/elastic/beats/compare/v6.0.0-beta1...master[Check the HEAD di
 
 *Metricbeat*
 
+- Add `filesystem.ignore_types` to system module for ignoring filesystem types. {issue}4685[4685]
+ 
 *Packetbeat*
 
 *Winlogbeat*
